--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Renuka Travels and Tours</title>
-  </head>
-  <body>
-    <div id="root">App</div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Renuka Travels and Tours</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Kalam:wght@300;400;700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div id="root">App</div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
