--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="/src/images/favicon.ico">
-  <title>Renuka Travels and Tours</title>
+  <title>Renuka Tours and Travels</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Kalam:wght@300;400;700&display=swap"
